continuing to work through issues. Losing top of page and getting space between wrapped items causing problems

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -160,22 +160,66 @@ footer{
 	display: flex;
 	flex-direction: column;
 	padding: 2% 5%;
+	height: 100%;
+} 
+
+.headserv{
+	display: flex;
+	flex-direction: column;
+}
+
+.lineserv{
+	font-size: 200%;
+}
+
+header {
+	border-bottom: black 1px solid;
+	padding: 2%;
 }
 
 .allboxes{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
-	align-content: space-around;
+	padding: 2% 0%;
+	border-bottom: black 1px solid;
+	padding-top: 1%;
+	align-content: space-between;
 }
-
 
 .boxes{
 	width: 45%;
 	border: black solid 1px;
 	background-color: lightgray;
+	padding: 2%
 }
 
 .boxes span{
 	border: black 1px solid;
+	background-color: white;
+	text-align: center;
+}
+
+.facts{
+	padding: 2% 0%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.factwords{
+	width:45%
+}
+
+.services-info-img{
+	width: 45%
+}
+
+li{
+	list-style-type: disc;
+	list-style-position: inside;
+}
+
+.servfoot{
+	padding-top: 2%;
+	padding-bottom: 4%;
 }
